# KJW_Wikipage

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
feeds/: feed_utils.py  models.py  serializers.py  tests.py  urls.py  views.py
feeds/migrations/: 0001_initial.py
